--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <p class="subheading">
               Department of Assamese
             </p>
-
-            <a class="btn light" href="about.html">Dept. Faculty</a>
+            <a class="btn light" href="about.html"><button type="button">Dept. Faculty</button></a>
             <a class="btn dark" href="https://panducollege.org/department/ASM">About Us</a>
           </div>
 
