--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="subheading">
               Department of Assamese
             </p>
-            <br><br>
+
             <a class="btn light" href="about.html">Dept. Faculty</a>
             <a class="btn dark" href="https://panducollege.org/department/ASM">About Us</a>
           </div>
@@ -99,5 +99,7 @@
     </div>
 
     <script src="main.js"></script>
+    <div class="footer">&copy;2023 <a href="https://instagram.com/deepjyoti_seal">Deepjyoti Seal</a> and <a href="https://instagram.com/kamal_medhi7434">Kamal Medhi</a></div>
+    
   </body>
 </html>
